[package]
name = "trashguy"
version = "0.0.1"
authors = ["kittyandrew <kitty@maudrew.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image", "ttf"]

